# votingSystem

./: .gitignore  README.md  db.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scratch.py  spark_streaming.py  streamlit_app.py  voting.py
src/: business_logic.py  db.py  main.py  model.py  scratch.py  spark_streaming.py  streamlit_app.py  voting_stream.py
